# gali-tcc

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json
source/: CMakeLists.txt
source/emulator/: CMakeLists.txt  main_emulator.cpp
source/emulator/application/impl/: com_ports.cpp  emulator_window.cpp
source/emulator/application/include/: emulator_hal_resorces.hpp  emulator_window.hpp  imgui_window.hpp
source/emulator/hal/impl/reader/: power.cpp  timer.cpp
source/emulator/hal/include/hal/: timer.hpp
source/emulator/hal/include/hal/utils/: subscriber.hpp
source/emulator/include/: com_ports.hpp  emulator_window.hpp  imgui_window.hpp
source/emulator/src/: emulator_window.cpp  imgui_window.cpp
source/libs/: CMakeLists.txt
source/libs/serial/: CMakeLists.txt
source/reader/: CMakeLists.txt
source/reader/application/: CMakeLists.txt  main_app_reader.c
source/reader/application/app/include/: app.h
source/reader/application/app/include/communication/: port.h
source/reader/application/app/include/communication/stack/: stack.h
source/reader/application/app/include/communication/stack/layer/: layer.h  layer_position_type.h  layer_type.h
source/reader/application/app/include/communication/stack/service/: service_type.h
source/reader/application/app/include/tasks/: queue.h  task.h  task_scheduler.h
source/reader/application/app/include/tasks/fsm/: evt.h  fsm.h
source/reader/application/app/include/tasks/types/: task_periodic.h
source/reader/application/app/src/: app.c
source/reader/application/app/src/communication/physical/: physical.c
source/reader/application/app/src/communication/stack/: stack.c
source/reader/application/app/src/tasks/: queue.c  task.c  task_scheduler.c
source/reader/application/app/src/tasks/fsm/: fsm.c
source/reader/application/impl/: app.c
source/reader/application/impl/communication/stack/: stack.c
source/reader/application/impl/communication/stack/layer/: layer.c
source/reader/application/impl/tasks/: queue.c  task.c  task_manager.c  task_scheduler.c
source/reader/application/impl/tasks/types/: task_periodic.c
source/reader/application/include/: app.h
source/reader/application/include/communication/: port.h
source/reader/application/include/communication/physical/: physical.h
source/reader/application/include/communication/stack/service/: services.h
source/reader/application/include/tasks/: queue.h  task.h  task_manager.h  task_scheduler.h
source/reader/hal/: CMakeLists.txt
source/reader/hal/include/hal/: power.h  timer.h
source/reader/hal_interface/: CMakeLists.txt
